# sreality-parser

./: .gitignore  Dockerfile  README.md  config.env  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: items.py  middlewares.py  pipelines.py  server.py  settings.py
src/spiders/: sreality.py
