[tool.poetry]
name = "sreality-parser"
version = "0.1.0"
description = ""
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
scrapy = "^2.9.0"
psycopg = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
